Affix.Infrastructure/security-groups.yml
---
AWSTemplateFormatVersion: 2010-09-09
Description: ECS Cluster
Parameters:
  VpcStackName:
    Type: String
    Default: affix-vpc

Resources:
  ECSHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the ECS hosts and the tasks/containers that run on them
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VPC
      SecurityGroupIngress:
#        - IpProtocol: tcp
#          FromPort: 22
#          ToPort: 22
#          CidrIp: 0.0.0.0/0
#        - IpProtocol: tcp
#          FromPort: 0
#          ToPort: 65535
#        - IpProtocol: -1
#          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
        - CidrIp: 0.0.0.0/0
          IpProtocol: -1
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: -1
#        - IpProtocol: -1
#          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Provides access to the load balancer that sits in front of ECS
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 5005
          ToPort: 5005
      SecurityGroupEgress:
          - CidrIp: 0.0.0.0/0
            IpProtocol: -1

Outputs:
  ECSHostSecurityGroup:
    Description: A reference to the security group for ECS hosts
    Value: !Ref ECSHostSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-ECSHostSecurityGroup

  LoadBalancerSecurityGroup:
    Description: A reference to the security group for load balancers
    Value: !Ref LoadBalancerSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-LoadBalancerSecurityGroup
